<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials_testing</name>
  <version>0.0.0</version>
  <description>The beginner_tutorials package for 808X first ros assignment</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="stinta@gmail.com">stinta</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>
</package>
